# AxiSEM3D

./: .gitignore  LICENSE  README.md  archer2_config  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub
Install/: anvil_config
SOLVER/: CMakeLists.txt
SOLVER/cmake/: FindFFTW.cmake
SOLVER/src/: fenv.c  fenv.cpp  main.cpp  main.hpp
SOLVER/src/core/boundary/ABC/: AbsorbingBoundary.cpp  AbsorbingBoundary.hpp  ClaytonFluid.hpp  ClaytonFluid1D.cpp  ClaytonFluid1D.hpp  ClaytonFluid3D.cpp  ClaytonFluid3D.hpp  ClaytonSolid.hpp  ClaytonSolid1D.cpp  ClaytonSolid1D.hpp  ClaytonSolid3D.cpp  ClaytonSolid3D.hpp  Sponge.hpp
SOLVER/src/core/boundary/axial/: AxialBoundary.cpp  AxialBoundary.hpp
SOLVER/src/core/boundary/solid_fluid/: SolidFluidBoundary.cpp  SolidFluidBoundary.hpp  SolidFluidCoupling.cpp  SolidFluidCoupling.hpp  SolidFluidCoupling1D.cpp  SolidFluidCoupling1D.hpp  SolidFluidCoupling3D.cpp  SolidFluidCoupling3D.hpp
SOLVER/src/core/boundary/surface/: FluidSurfaceBoundary.cpp  FluidSurfaceBoundary.hpp
SOLVER/src/core/domain/: Domain.cpp  Domain.hpp  MessageRank.cpp  MessageRank.hpp  Messaging.hpp
SOLVER/src/core/element/: Element.cpp  Element.hpp  FluidElement.cpp  FluidElement.hpp  SolidElement.cpp  SolidElement.hpp
SOLVER/src/core/element/PRT/: PRT.hpp
SOLVER/src/core/element/common/: FieldArithmetic.hpp  Property.hpp  eigen_element.hpp  mapPPvsN.hpp
SOLVER/src/core/element/crd/: CoordTransform.hpp  CoordTransformCartesian.hpp  CoordTransformSpherical.hpp
SOLVER/src/core/element/grad/: GradientQuadrature.hpp
SOLVER/src/core/element/material/acoustic/: Acoustic.hpp
SOLVER/src/core/element/material/elastic/: Elastic.hpp
SOLVER/src/core/element/material/elastic/anisotropy/: Anisotropic.hpp  Isotropic.hpp  TransverselyIsotropic.hpp
SOLVER/src/core/fft/: SolverFFTW.cpp  SolverFFTW.hpp  fft.cpp  fft.hpp
SOLVER/src/core/output/: channel.cpp  channel.hpp
SOLVER/src/core/output/element-wise/: eigen_element_op.hpp
SOLVER/src/core/output/element-wise/element/: ElementOp.hpp  ElementOpFluid.cpp  ElementOpFluid.hpp  ElementOpGroup.hpp  ElementOpSolid.cpp  ElementOpSolid.hpp
SOLVER/src/core/output/element-wise/io/: ElementIO.cpp  ElementIO.hpp  ElementIO_NetCDF.cpp  ElementIO_NetCDF.hpp  ElementIO_ParNetCDF.cpp  ElementIO_ParNetCDF.hpp
SOLVER/src/core/output/station-wise/: channel.hpp  eigen_station.hpp
SOLVER/src/core/output/station-wise/io/: StationIO.cpp  StationIO.hpp  StationIO_Ascii.cpp  StationIO_Ascii.hpp  StationIO_NetCDF.cpp  StationIO_NetCDF.hpp  StationIO_ParNetCDF.cpp  StationIO_ParNetCDF.hpp
SOLVER/src/core/output/station-wise/station/: Station.cpp  Station.hpp  StationFluid.cpp  StationFluid.hpp  StationGroup.hpp  StationSolid.cpp  StationSolid.hpp
SOLVER/src/core/point/: FluidPoint.cpp  FluidPoint.hpp  Point.hpp  SolidPoint.cpp  SolidPoint.hpp  eigen_point.hpp  point_time.hpp
SOLVER/src/core/point/mass/: Mass.hpp  Mass1D.hpp  Mass3D.cpp  Mass3D.hpp  MassOceanLoad1D.hpp  MassOceanLoad3D.cpp  MassOceanLoad3D.hpp
SOLVER/src/core/source/elem_src/: ElementSource.hpp
SOLVER/src/core/source/elem_src/fluid/: FluidPressure.cpp  FluidPressure.hpp  FluidSource.hpp
SOLVER/src/core/source/elem_src/solid/: SolidForce.cpp  SolidForce.hpp  SolidMoment.cpp  SolidMoment.hpp  SolidSource.hpp
SOLVER/src/core/source/elem_src/stf/: GaussianSTF.hpp  NetCDF_STF.cpp  NetCDF_STF.hpp  STF.cpp  STF.hpp  StreamSTF.cpp  StreamSTF.hpp
SOLVER/src/core/source/injection/: ElementInteriorWJ.hpp  SourceTimeFunctionNetCDF.cpp  SourceTimeFunctionNetCDF.hpp  WavefieldInjection.cpp  WavefieldInjection.hpp
SOLVER/src/core/time/: NewmarkTimeScheme.cpp  NewmarkTimeScheme.hpp  SymplecticTimeScheme.cpp  SymplecticTimeScheme.hpp  TimeScheme.cpp  TimeScheme.hpp
SOLVER/src/models3D/: Model3D.cpp  Model3D.hpp
SOLVER/src/models3D/geometric/: Ellipticity.cpp  Ellipticity.hpp  Geometric3D.cpp  Geometric3D.hpp  StructuredGridG3D.cpp  StructuredGridG3D.hpp
SOLVER/src/models3D/ocean_load/: OceanLoad3D.cpp  OceanLoad3D.hpp  StructuredGridO3D.cpp  StructuredGridO3D.hpp
SOLVER/src/models3D/volumetric/: StructuredGridV3D.cpp  StructuredGridV3D.hpp  Volumetric3D.cpp  Volumetric3D.hpp  sg_tools.hpp
SOLVER/src/preloop/exodus/: ABC.cpp  ABC.hpp  ExodusMesh.cpp  ExodusMesh.hpp  geodesy.cpp  geodesy.hpp
SOLVER/src/preloop/mesh/: LocalMesh.cpp  LocalMesh.hpp  eigen_mesh.hpp
SOLVER/src/preloop/mesh/topology/: metis.cpp  metis.hpp  vicinity.cpp  vicinity.hpp  vicinity.py
SOLVER/src/preloop/nr_field/: NrField.cpp  NrField.hpp  NrFieldAnalytical.cpp  NrFieldAnalytical.hpp  NrFieldConstant.cpp  NrFieldConstant.hpp  NrFieldPointwise.cpp  NrFieldPointwise.hpp  NrFieldStructured.cpp  NrFieldStructured.hpp
SOLVER/src/preloop/output/: ElementOutput.cpp  ElementOutput.hpp  StationOutput.cpp  StationOutput.hpp
SOLVER/src/preloop/scanning/: WavefieldScanning.cpp  WavefieldScanning.hpp
SOLVER/src/preloop/se_model/: SE_Model.cpp  SE_Model.hpp  eigen_sem.hpp
SOLVER/src/preloop/se_model/gll/: GLLPoint.cpp  GLLPoint.hpp
SOLVER/src/preloop/se_model/quad/: Quad.cpp  Quad.hpp  spectrals.hpp
SOLVER/src/preloop/se_model/quad/mapping/: Mapping.hpp  MappingLinear.hpp  MappingSemiSpherical.hpp  MappingSpherical.hpp
SOLVER/src/preloop/se_model/quad/physical/: AttBuilder.cpp  AttBuilder.hpp  Material.cpp  Material.hpp  OceanLoad.hpp  PhysicalProperty.hpp  Undulation.cpp  Undulation.hpp
SOLVER/src/preloop/source/: Mechanism.cpp  Mechanism.hpp  Source.cpp  Source.hpp
SOLVER/src/shared/: numerical.hpp  spectral.hpp
SOLVER/src/shared/data_structure/: RTreeND.hpp  StructuredGrid.hpp
SOLVER/src/shared/eigen/: eigen.hpp  eigen_generic.hpp  eigen_tensor.hpp  eigen_tools.hpp
SOLVER/src/shared/io/: io.cpp  io.hpp
SOLVER/src/shared/io/inparam/: InparamYAML.cpp  InparamYAML.hpp  inparam.cpp  inparam.hpp
SOLVER/src/shared/io/netcdf/: NetCDF_Reader.cpp  NetCDF_Reader.hpp  NetCDF_Writer.cpp  NetCDF_Writer.hpp  netcdf.hpp
SOLVER/src/shared/mpi/: mpi.cpp  mpi.hpp
SOLVER/src/shared/utilities/: bstring.cpp  bstring.hpp  timer.cpp  timer.hpp  vector_tools.hpp
doc/: Installation.md  (+1 more)
(+185 files in other folders)
